@@ -1,3 +1,10 @@
+2007-09-04  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Cecil/ReflectionWriter.cs:
+		Adapt a patch by Ewout Prangsma <ewout@tallapplications.com>.
+		Cache the typespec tokens instead of the typespec themselves
+		because GenericParameters are somethimes considered as typespecs.
+
 2007-08-28  Jb Evain  <jbevain@novell.com>
 
 	* Mono.Cecil.Cil/CodeWriter.cs
